General progress towards completion of /library
- Implemented Edit Novel and Remove Model modals, TODO: associated routes backend
- Introduces SQLAlchemy database and implements base db models
- CSS sugar

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -136,6 +136,7 @@ input[type=number] {
 }
 .modal-cust{
   border-radius: 1rem;
+  overflow: hidden;
 }
 .modal_header_cust{
   margin-bottom: 0;
@@ -411,10 +412,9 @@ section.section_library{
 .download_btn{
   display: flex;
   flex-direction: column;
-  width: 10rem;
   height: 100%;
   margin: 0 0.5rem;
-  padding: 1rem;
+  padding: 1.5rem;
   color: #fff;
   background: #ff8d8d;
   text-align: center;
@@ -438,16 +438,47 @@ section.section_library{
 .library_series_entry:hover .download_specific_input{
   outline: 1px solid #d26969;
 }
+#opt_keep_dict{
+  width: 1.5rem;
+  height: 1.5rem;
+  margin: 0 auto;
+}
 pre#unbootstrap{
   color: inherit;
 }
 
 
-/*----------------------[ Register Modal stylings ]----------------------*/
+/*----------------------[ Register Novel Modal stylings ]----------------------*/
 .register_modal_cust{
   border: 1px solid #40cc60;
   border-left: 0.5rem solid #40cc60;
 }
 .register_novel_header{
   color: #40cc60;
+}
+
+/*----------------------[ Edit Novel Modal stylings ]----------------------*/
+.edit_modal_cust{
+  border: 1px solid #cc406b;
+  border-left: 0.5rem solid #cc406b;
+}
+.edit_novel_header{
+  color: #cc406b;
+}
+
+/*----------------------[ Remove Novel Modal stylings ]----------------------*/
+.remove_modal_cust{
+  border: 1px solid #9c0000;
+  border-left: 0.5rem solid #9c0000;
+}
+.remove_novel_header{
+  color: #fff;
+}
+.remove_warning_div{
+  width: 80%;
+  margin: 0 auto 3rem auto;
+  padding: 1rem;
+  border: 2px solid #dc3545;
+  border-radius: 1rem;
+  font-size: 1.4rem;
 }
