--- a/app/templates/modals/edit_novel.html
+++ b/app/templates/modals/edit_novel.html
@@ -1,36 +1,36 @@
-{% macro register_novel_modal(form) %}
-<div class="modal fade" id="register_modal_push" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-notify modal-info" role="document">
+{% macro edit_novel_modal(form) %}
+<div class="modal fade" id="edit_modal_push" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+aria-hidden="true" route="{{ url_for('library') }}">
+  <div class="modal-dialog modal-dialog-centered modal-lg modal-notify modal-info" role="document">
     <!-- Modal Form Content-->
-    <form class="modal-content text-center modal-cust register_modal_cust" id="form_register">
+    <form class="modal-content text-center modal-cust edit_modal_cust" id="edit_novel_form" action="{{ url_for('library_edit_novel') }}">
       <!--Modal Header-->
       <div class="modal-header d-flex justify-content-center">
-        <p class="modal_header_cust register_novel_header"> Register a Novel </p>
+        <p class="modal_header_cust edit_novel_header"> Edit this Novel </p>
       </div>
 
       <!--Modal Body-->
-      <div class="modal-body">
+      <div class="modal-body modal_body_cust">
           {{ form.hidden_tag() }}
           <fieldset class="form-group">
             <div class="form-group form_group_cust">
               {{ form.title.label(class="form-control-label label_cust") }}
-              {{ form.title(class="form-control input_cust") }}
+              <div class="form_input_div">
+                {{ form.title(class="form-control input_cust") }}
+              </div>
             </div>
             <div class="form-group form_group_cust">
               {{ form.abbr.label(class="form-control-label label_cust") }}
-              {{ form.abbr(class="form-control input_cust") }}
-            </div>
-            <div class="form-group form_group_cust">
-              {{ form.series_url.label(class="form-control-label label_cust") }}
-              {{ form.series_url(class="form-control input_cust", placeholder="http://ncode.syosetu.com/XXXXXXX") }}
+              <div class="form_input_div">
+                {{ form.abbr(class="form-control input_cust") }}
+              </div>
             </div>
           </fieldset>
       </div>
 
       <!--Modal Footer-->
       <div class="modal-footer flex-center">
-        {{ form.submit(class="btn btn-outline-secondary btn-cust") }}
+        {{ form.submit(class="btn btn-success btn-cust", id="edit_novel_submit_btn") }}
         <button class="btn btn-outline-danger btn-cust" data-dismiss="modal"> Cancel </button>
       </div>
 
