--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -1,3 +1,4 @@
+{% from "series_entry.html" import series_entry%}
 {% from "modals/register_novel.html" import register_novel_modal%}
 {% from "modals/edit_novel.html" import edit_novel_modal%}
 {% from "modals/remove_novel.html" import remove_novel_modal%}
@@ -28,7 +29,7 @@
 			<div class="library_sidepanel">
 				<!-- Register button -->
 				<div style="padding: 1rem 0;">
-					<button type="button" class="menu_button menu_button_small" id="menu_library_register" data-toggle="modal" data-target="#register_modal_push" title="Add Series">
+					<button type="button" class="menu_button menu_button_small modal_trigger" id="menu_library_register" data-toggle="modal" data-target="#register_modal_push" title="Add Series">
 						<div class="button_icon">
 							<ion-icon name="add-outline"></ion-icon>
 						</div>
@@ -47,54 +48,15 @@
 			</div>
 			<div class="library_mainpanel">
 				{% for novel in series %}
-					{% set next_ch = novel.current + 1 %}
-					<div class="library_series_entry" id="series_{{novel.abbr}}">
-						<div class="entry_minibanner">
-							<div class="minibanner entry_abbr"> {{novel.abbr}} </div>
-							<div class="minibanner entry_updated"> Updated </div>
-						</div>
-						<div class="entry_title"> {{novel.title}} </div>
-						<div class="entry_details">
-							<div class="entry_current">
-								<pre id="unbootstrap">Current: {{novel.current}}</pre>
-							</div>
-							<div class="entry_latest">
-								<pre id="unbootstrap"> Latest: {{novel.latest}}</pre>
-							</div>
-						</div>
-						<div class="entry_action_bar">
-							<!-- This div is for convenience in js and is not meant to be displayed-->
-							<div class="entry_info" style="display: none;">
-								<span class="info_title"> {{novel.title}} </span>
-								<span class="info_abbr"> {{novel.abbr}} </span>
-								<span class="info_current"> {{novel.current}} </span>
-								<span class="info_latest"> {{novel.latest}} </span>
-								<span class="info_code"> {{novel.code}} </span>
-							</div>
-							<div class="entry_edit">
-								<button type="button" class="entry_action_button" data-toggle="modal" data-target="#edit_modal_push" title="Edit Series" id="edit_{{novel.abbr}}">
-									<ion-icon name="create"></ion-icon>
-								</button>
-							</div>
-							<div class="entry_trash">
-								<button type="button" class="entry_action_button" data-toggle="modal" data-target="#remove_modal_push" title="Remove Series" id="rmv_{{novel.abbr}}">
-									<ion-icon name="trash"></ion-icon>
-								</button>
-							</div>
-						</div>
-						<div class="entry_download_bar">
-							<div class="download_btn table_of_contents" onclick="location.href='{{'/library/' ~ novel.abbr}}'">
-								<span> Table of Contents </span>
-								<ion-icon style="font-size: 1.5rem; margin: 0 auto;" name="library-outline"></ion-icon>
-							</div>
-							<div class="download_btn download_next" onclick="location.href='{{'/library/' ~ novel.abbr ~ '/' ~ next_ch}}'">
-								<span> Read Next </span>
-								<ion-icon style="font-size: 1.5rem; margin: 0 auto;" name="arrow-redo"></ion-icon>
-							</div>
-						</div>
-					</div>
+					{{ series_entry(novel) }}
 				{% endfor %}
 			</div>
 		</div>
 	</section>
 {% endblock %}
+
+{% block script_area %}
+	$(document).ready(function() {
+		setupLibrary();
+	});
+{% endblock%}
